--- a/bookmarks/requirements.txt
+++ b/bookmarks/requirements.txt
@@ -1,2 +1,10 @@
-Django>=3.2
-social-auth-core>=4.4.1
+asgiref==3.5.2
+Django~=4.1.0
+Pillow==9.2.0
+sqlparse==0.4.2
+git+https://github.com/python-social-auth/social-app-django.git@20fabcd7bd9a8a41910bc5c8ed1bd6ef2263b328
+git+https://github.com/django-extensions/django-extensions.git@25a41d8a3ecb24c009c5f4cac6010a091a3c91c8
+werkzeug==2.2.2
+pyOpenSSL
+requests==2.28.1
+easy-thumbnails==2.8.3
